--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 	<div class="container">
 		<div id="buttons"></div>
+			<button id="rock">KAMIEŃ</button>
+			<button id="paper">PAPIER</button>
+			<button id="scissors">NOŻYCE</button>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
